# clawui

./: .gitignore  AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  PROGRESS.md  README.md  SOUL.md  TODO.md  USER.md  automate_wechat.py  check_github_issues.py  create_github_repo_cdp.py  detect_wechat_devtools.py  diagnose_google.py  e2e_github_creation.py  learn_template.py  pyproject.toml  pytest.ini  run_e2e_with_notify.sh  run_vision_agent.py  test_e2e.py  test_google_headless.py  test_inherit.py  test_persistent_profile.py  test_simple_agent.py  test_vision_tool.py  test_wait_selector.py
.clawhub/: lock.json
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
demos/: autonomous_cdp_test.py  create_github_repo_cdp.py  demo_mini_game_cdp.py  e2e_github_creation.py  google_test_click.py  run_wechat_auto.sh  setup_wechat.py  simple_plan.py
examples/: 01_desktop_basics.py  02_browser_automation.py  03_wait_and_verify.py  04_drag_and_window.py
memory/: 2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  heartbeat-state.json
projects/gui-automation/: README.md  SKILL.md  gui-automation
projects/gui-automation/demos/: firefox_marionette_demo.py  github_google_login.py  github_repo_creation.py  google_signup_demo.py  google_signup_demo.py.bak  google_signup_interactive.py  google_signup_retry.py  google_signup_sms.py  simple_login_demo.py
projects/gui-automation/research/: anthropic-analysis.md
projects/gui-automation/src/: agent.py  cdp_backend.py  cdp_helper.py  main.py  ocr_tool.py  perception.py  query.py  recorder.py  screenshot.py  vision_backend.py  x11_helper.py
projects/gui-automation/tests/: GITHUB_GOOGLE_LOGIN_TEST.md
projects/gui-automation/tools/: start_chromium_with_profile.py
scripts/: auto_play_v3.py  auto_play_v4.py  auto_play_v5.py  capture_diag.py  e2e_wechat_minigame.py  mutter_capture.py  pipewire_capture.py  plane_game_bot.py  silent_screenshot.py  validate_python_files.py
skills/ddg-web-search/.clawhub/: origin.json
skills/gui-automation/: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  PROGRESS.md  README.md  RELEASE.md  pyproject.toml  requirements.txt
skills/gui-automation/.github/workflows/: ci.yml
skills/gui-automation/demos/: browser_form_demo.py
skills/gui-automation/research/: atspi-analysis.md
skills/gui-automation/src/: __init__.py  __main__.py  actions.py  agent.py  annotated_screenshot.py  api.py  atspi_helper.py  backends.py  cdp_backend.py  cdp_helper.py  cli.py  exceptions.py  game_perception.py  github_integration.py  marionette_backend.py  marionette_helper.py  ocr_tool.py  perception.py  py.typed  recorder.py  screenshot.py  stream_capture.py  x11_helper.py
skills/gui-automation/tests/: test_api.py  test_api_unit.py  test_core.py  test_exceptions.py  test_github_integration.py
skills/gui-automation/tools/: check_issues.py
tests/: conftest.py  test_cdp_auto_launch.py  test_cdp_launch.py  test_cdp_simple.py  test_cdp_with_gui.py  test_cli_status.py  test_core.py  test_e2e.py  test_firefox_marionette.py  test_fix.py  test_google_direct.py  test_unit.py  test_vision_tool.py  test_x11_workspace_fix.py
tools/: apply_retry_improvement.py  check_system_health.py  github_pat_manager.py
